--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -353,6 +353,18 @@ li {
 /*}
 /**/
 
+/*<style type="text/css">*/
+ 
+#share-buttons img {
+width: 35px;
+padding: 5px;
+border: 0;
+box-shadow: 0;
+display: inline;
+}
+ 
+/*</style>*/
+
 ol li {
   list-style-position: inside;
   list-style: decimal;
