--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -303,15 +303,16 @@ ul {
     padding: 0;
     overflow:hidden;
 }
-a:link {
-    margin:0 auto;
-    display:block;
-    /*width: 100px;*/
-    color: white;
-    text-align:center;
-    padding:14px 16px;
-    text-decoration:none;
-}
+/*a:link {
+/*    margin:0 auto;
+/*    display:block;
+/*    /*width: 100px;*/
+/*    color: white;
+/*    text-align:center;
+/*    padding:14px 16px;
+/*    text-decoration:none;
+/*}
+/**/
 li a:hover {
     background-color:#111;
 }
