--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -335,6 +335,7 @@ li {
     font-size: 22px;
     text-align:center;
     background-color:#333;
+    padding: 12px 8px 12px 8px;
 }
 
 #ComicTitle {
